relative url test

--- a/_includes/landing_content.html
+++ b/_includes/landing_content.html
@@ -2,7 +2,7 @@
 
 <h2>Of note</h2>
 <ul>
-  <li>Bachelors' and Masters' <a href="{{ '/' | relative_url }}2025/06/25/theses.html">theses</a>,</li>
+  <li>Bachelors' and Masters' <a href="/2025/06/25/theses.html">theses</a>,</li>
   <li>UOV <a href="{{ '/' | relative_url }}2025/06/25/uov-whitepaper.html">whitepaper</a>,</li>
   <li><a href="{{ '/' | relative_url }}2025/06/25/fonts-colors.html">Fonts & colors</a>.</li>
 </ul>
