more material, fixes, favicon

--- a/_includes/landing_content.html
+++ b/_includes/landing_content.html
@@ -1,13 +1,12 @@
-<p>Welcome to my landing page! There's not much here, just where I keep my files :)</p>
+<p>Welcome to my landing page! Here are some of the things I keep on this site:</p>
 
-<h2>Of note</h2>
 <ul>
-  <li>Bachelors' and Masters' <a href="{{ '/' | relative_url }}2025/06/25/theses.html">theses</a>,</li>
-  <li>UOV <a href="{{ '/' | relative_url }}2025/06/25/uov-whitepaper.html">whitepaper</a>,</li>
-  <li><a href="{{ '/' | relative_url }}2025/06/25/fonts-colors.html">Fonts & colors</a>.</li>
+  <li><a href="/2025/06/28/prog-projects.html">Code & Tools</a>,</li>
+  <li><a href="/2025/06/28/lang-projects.html">Language Learning</a>,</li>
+  <li><a href="/2025/06/28/misc.html">Miscellaneous</a>.</li>
 </ul>
 
-<p>For information about how this website was made, check out <a href="{{ '/' | relative_url }}2025/06/25/about-this-website.html">this post</a>.</p>
+<p>You can find my CV <a href="/assets/CV.pdf">here</a>.</p>
 
 <hr />
 
