--- a/_includes/landing_head.html
+++ b/_includes/landing_head.html
@@ -1,13 +1,14 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% if site.compass.author %}{{ site.compass.author }} &#8226; {% endif %}{{ site.compass.tagline | strip_html }}</title>
+  <title>{% if site.compass.author %}{{ site.compass.author }} {% if site.compass.tagline %}&#8226;{% endif %}{% endif %}{{ site.compass.tagline | strip_html }}</title>
 
-  <link rel="apple-touch-icon" href="{{ site.baseurl }}{{ site.compass.logo }}"/>
-  <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="{{ site.url }}{{ site.baseurl }}/favicon.ico" />
+  <!-- Icons -->
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-144-precomposed.png">
+                                 <link rel="shortcut icon" href="/public/favicon.ico">
 
-  <link rel="stylesheet" href="{{ '/' | relative_url }}public/css/landing_main.css">
-  <link rel="stylesheet" href="{{ '/' | relative_url }}public/css/landing_normalize.css">
+  <link rel="stylesheet" href="/public/css/landing_main.css">
+  <link rel="stylesheet" href="/public/css/landing_normalize.css">
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   
@@ -39,6 +40,7 @@
   <meta name="twitter:url" content="{{ site.url }}{{ site.baseurl }}{{ page.url }}">
   <meta name="twitter:description" content="{{ site.compass.description }}">
   <meta name="twitter:image:src" content="{{ site.url }}{{ site.baseurl }}{{ site.compass.logo }}">
+
 
   {% if site.compass.include_analytics %}
   {% include analytics.html %}
