--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,11 @@
     <nav class="sidebar-nav">
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ '/' | relative_url }}">Home</a>
 
-      <a class="sidebar-nav-item" href="{{ '/' | relative_url }}2025/06/25/about-this-website.html">About</a>
+      <a class="sidebar-nav-item" href="/2025/06/28/prog-projects.html">Code</a>
+
+      <a class="sidebar-nav-item" href="/2025/06/28/lang-projects.html">Language</a>
+
+      <a class="sidebar-nav-item" href="/2025/06/28/misc.html">Misc</a>
 
       <a class="sidebar-nav-item" href="https://github.com/XaviACLM/XaviACLM.github.io">Source</a>
     </nav>
