--- a/_includes/landing_content.html
+++ b/_includes/landing_content.html
@@ -6,7 +6,7 @@
   <li><a href="/2025/06/28/misc.html">Miscellaneous</a>.</li>
 </ul>
 
-<p>You can find my CV <a href="/assets/CV.pdf">here</a>.</p>
+<p>You can find my CV <a href="/assets/CV_XaviArnal.pdf">here</a>.</p>
 
 <hr />
 
